--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DbConn": "Server=Austin;database=CodeSimpleCrud;integrated security=true;Trusted_connection=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
